# code-interpreter

./: .config  .dockerignore  .editorconfig  .env  .env.example  .geminiignore  .gitignore  .lycheeignore  .npmrc  .prettierignore  .prettierrc.json  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CodexAI.py  Dockerfile  GEMINI.md  LICENSE.txt  Makefile  Models.MD  OPENAGENT.md  README.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.2.2.md  RELEASE_NOTES_v3.2.3.md  RELEASE_NOTES_v3.3.0.md  ROADMAP.md  SECURITY.md  SageMaker.py  VICI-AI.py  VICI.py  bard-interpreter.py  benchmark.py  benchmark_compiled.py  build_release.sh  chat-coder-llm.py  chat_coder_llm.py  code-llama.py  code.py  (+25 more)
.Jules/: palette.md
.allstar/: branch_protection.yaml
.gcp/: Dockerfile.development  Dockerfile.development.dockerignore  Dockerfile.gemini-code-builder  development-worker.yml  release-docker.yml
.gemini/: config.yaml  settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: pre-commit
.jules/: bolt.md  palette.md  sentinel.md
.openagent/: settings.json
configs/: browser-use-bu-max.config  browser-use-bu-max.json  claude-2.1.config  claude-2.1.json  claude-2.config  claude-2.json  claude-3-5-haiku.config  claude-3-5-sonnet.config  claude-3-5-sonnet.json  claude-3-7-sonnet.config  claude-3-7-sonnet.json  claude-3-opus.config  claude-3-sonnet.config  claude-4-6-opus.config  claude-4-6-opus.json  claude-4-6-sonnet.config  claude-4-6-sonnet.json  claude-haiku-4-5.config  claude-haiku-4-5.json  claude-opus-4-6.config  code-llama-phind.config  code-llama.config  code-llama.json  deepseek-chat.config  deepseek-chat.json  deepseek-coder.config  deepseek-coder.json  deepseek-reasoner.config  deepseek-reasoner.json  gemini-1.5-flash.config  gemini-1.5-pro.config  gemini-1.5-pro.json  gemini-2.5-flash-lite.config  gemini-2.5-flash-lite.json  gemini-2.5-flash.config  gemini-2.5-flash.json  gemini-3-flash-preview.config  gemini-3-flash-preview.json  gemini-3.1-flash-lite-preview.config  gemini-3.1-flash-lite-preview.json  (+86 more)
docs/: README.md  index.md  integration-tests.md  issue-and-pr-automation.md  local-development.md  npm.md  redirects.json  release-confidence.md  releases.md  sidebar.json
evals/: README.md  answer-vs-act.eval.ts  app-test-helper.ts  ask_user.eval.ts  auto_memory_contract.eval.ts  auto_memory_modes.eval.ts  automated-tool-use.eval.ts  background_processes.eval.ts  calendar-all-day.eval.ts  cli_help_delegation.eval.ts  component-test-helper.ts  concurrency-safety.eval.ts  edit-locations-eval.eval.ts  file_creation_behavior.eval.ts  frugalReads.eval.ts  frugalSearch.eval.ts  generalist_agent.eval.ts  generalist_delegation.eval.ts  gitRepo.eval.ts  grep_search_functionality.eval.ts  hierarchical_memory.eval.ts  interactive-hang.eval.ts  llm-judge.ts  memory_persistence.eval.ts  model_steering.eval.ts  plan_mode.eval.ts  prompt_injection_mcp.eval.ts  redundant_casts.eval.ts  sandbox_recovery.eval.ts  shell-efficiency.eval.ts  shell_command_safety.eval.ts  skill_extraction.eval.ts  snapshot_fidelity.eval.ts  statistics-helper.ts  subagents.eval.ts  subtask_delegation.eval.ts  test-helper.test.ts  test-helper.ts  tool_output_masking.eval.ts  tracker.eval.ts  (+6 more)
history/: history.json
integration-tests/: acp-env-auth.test.ts  acp-telemetry.test.ts  api-resilience.responses  api-resilience.test.ts  browser-agent-localhost.dynamic.responses  browser-agent-localhost.form.responses  browser-agent-localhost.multistep.responses  browser-agent-localhost.navigate.responses  browser-agent-localhost.screenshot.responses  browser-agent-localhost.test.ts  browser-agent.cleanup.responses  (+101 more)
(+733 files in other folders)
