[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-code-interpreter"
version = "3.3.0"
description = "Free, local alternative to ChatGPT Code Interpreter. Describe tasks in plain English - get results. Supports OpenAI, Gemini, Groq, Ollama, and 20+ free models. Open Interpreter replacement. Windows/Mac/Linux."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Haseeb Mir", email = "haseebmir.hm@gmail.com" },
]
keywords = [
  "code-interpreter",
  "chatgpt-alternative",
  "free",
  "local",
  "open-interpreter",
  "llm",
  "sandbox",
  "openai",
  "gemini",
  "groq",
  "ollama",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Environment :: Console",
]
dependencies = [
  "litellm>=1.83.0",
  "Pygments",
  "python-dotenv",
  "Requests",
  "rich",
  "pandas",
  "matplotlib",
  "plotly",
  "stdlib_list",
  "legacy-cgi",
]

[project.urls]
Homepage = "https://github.com/haseeb-heaven/code-interpreter"
Repository = "https://github.com/haseeb-heaven/code-interpreter"
Issues = "https://github.com/haseeb-heaven/code-interpreter/issues"

[project.scripts]
open-code-interpreter = "interpreter:main"

[tool.setuptools]
py-modules = ["interpreter"]

[tool.setuptools.packages.find]
include = ["libs*"]
