[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-code-interpreter"
version = "3.6.0"
description = "Free, local alternative to ChatGPT Code Interpreter. Describe tasks in plain English - get results. Supports OpenAI, Gemini, Groq, Ollama, and 20+ free models. Open Interpreter replacement. Windows/Mac/Linux."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Haseeb Mir", email = "haseebmir.hm@gmail.com" },
]
keywords = [
  "code-interpreter",
  "chatgpt-alternative",
  "free",
  "local",
  "open-interpreter",
  "llm",
  "sandbox",
  "openai",
  "gemini",
  "groq",
  "ollama",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Environment :: Console",
]
dependencies = [
  "litellm>=1.83.0",
  "Pygments",
  "python-dotenv",
  "Requests",
  "rich",
  "pandas",
  "matplotlib",
  "plotly",
  "openpyxl",
  "tabulate",
  "pyarrow",
  "duckdb",
  "seaborn",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "reportlab",
  "numpy",
  "stdlib_list",
  "legacy-cgi",
]

[project.urls]
Homepage = "https://github.com/haseeb-heaven/code-interpreter"
Repository = "https://github.com/haseeb-heaven/code-interpreter"
Issues = "https://github.com/haseeb-heaven/code-interpreter/issues"

[project.scripts]
open-code-interpreter = "interpreter:main"

[tool.setuptools]
py-modules = ["interpreter"]

[tool.setuptools.packages.find]
include = ["libs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "--strict-markers",
]
# CI enforces --cov-fail-under=60 on critical modules (see .github/workflows/ci.yml).
# Full libs coverage is reported via Codecov and raised incrementally toward 80%.

[tool.coverage.run]
source = ["libs"]
omit = [
  "libs/terminal_ui.py",
  "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
